crates/frontend/samples/test1.out
error: failed to prove 0x130812b30: Tuple(0x130812b60: [0x130810008: Tuple(0x130810038: [0x130810538: Tuple(0x130810568: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x13081cf50: [Equals(Ty(0x13081d028: Tuple(0x13081d058: [0x13081d110: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:23:28
   │
23 │ impl<T: Associated<T: Demo<((), (((),),), ((),))>>> Dummy for T {}
   │                            ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x130812b30: Tuple(0x130812b60: [0x130810008: Tuple(0x130810038: [0x130810538: Tuple(0x130810568: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x13081cf50: [Equals(Ty(0x13081d028: Tuple(0x13081d058: [0x13081d110: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:25:11
   │
25 │ impl Demo<((), (((),),), ((),))> for () {}
   │           ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x130812b30: Tuple(0x130812b60: [0x130810008: Tuple(0x130810038: [0x130810538: Tuple(0x130810568: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x13081cf50: [Equals(Ty(0x13081d028: Tuple(0x13081d058: [0x13081d110: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:28:24
   │
28 │     type IHahThe: Demo<((), (((),),), ((),))>;
   │                        ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x130812b30: Tuple(0x130812b60: [0x130810008: Tuple(0x130810038: [0x130810538: Tuple(0x130810568: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x13081cf50: [Equals(Ty(0x13081d028: Tuple(0x13081d058: [0x13081d110: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:36:16
   │
36 │     type Woo = ((), (((),),), ((),));
   │                ^^^^^^^^^^^^^^^^^^^^^
